# artechrms

./: .dockerignore  .env.example  .gitignore  ARTECH_UI_SYSTEM.md  CLAUDE.md  CROSS_PLATFORM_GUIDE.md  DEPLOY-NGROK.md  Dockerfile  Dockerfile.dev  HRMS_COMPLETE_REFERENCE.md  MOBILE_UI_SPEC.md  PRODUCT.md  README.md  REQUIRED_CHANGES.md  SAMPLE_TEMPLATES.md  SETUP_NEW_PC.md  UI_SPEC.md  artechrms_backup.sql  check_att.py  demo_schema.sql  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  docker-entrypoint.sh  gen_email.py  gen_icons.js  import_attendance.js  railway.toml  sample_approved_email.html  sample_leave_email.html  sample_leave_email_cc.html  sample_rejected_email.html  seed_demo.py  seed_demo.sql
.github/workflows/: deploy.yml  mobile-build.yml  tauri-build.yml
.gstack/: browse-audit.jsonl
backend/: approval_utils.py  auth_utils.py  biometric_scheduler.py  biometric_zk.py  database.py  hr_reminders.py  leave_accrual.py  main.py  payslip_pdf.py  requirements.txt  storage.py  work_hours_scheduler.py
backend/models/: __init__.py  activity_log.py  appraisal.py  (+20 more)
docs/: non-tech-ppt.md  pitch-deck.md  tech-ppt.md
frontend/: index.html
hrms-react/: .env.development  .env.production  .gitignore  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
hrms-react/src-tauri/: Cargo.toml  tauri.conf.json
hrms-react/src-tauri/capabilities/: default.json
hrms-react/src-tauri/icons/: README.md  icon.icns
hrms-react/src-tauri/src/: lib.rs  main.rs
ui/: THEMES.md
(+363 files in other folders)
